Updated image sql-icon2.png

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <img src="images/css-icon.png" alt="CSS3">
             <img src="images/js-icon.png" alt="JavaScript">
             <img src="images/php-icon.png" alt="PHP">
-            <img src="images/sql-icon.png" alt="SQL">
+            <img src="images/sql-icon2.png" alt="SQL">
             <img src="images/git-icon.png" alt="Git">
         </div>
     </section>
